@@ -9,3 +9,4 @@
 # 20240407
 - Added Command Permission Checks
 - Create the Global Admin checking command
+- Dispose Database connection upon extension unload (Clenaup)
